--- a/FINAL PROJECT/Properties/Resources.resx
+++ b/FINAL PROJECT/Properties/Resources.resx
@@ -220,8 +220,8 @@
   <data name="BG_User-Profile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BG_User-Profile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ICON_Bear" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ICON_Bear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="AboutUs_Pipol2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AboutUs_Pipol2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnPressed_Dashboard" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnPressed_Dashboard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -247,8 +247,8 @@
   <data name="Untitled design - 2024-04-29T023527.334" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Untitled design - 2024-04-29T023527.334.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ICON_Wolf" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ICON_Wolf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="deleteIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\deleteIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Untitled design - 2024-04-29T023639.486" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Untitled design - 2024-04-29T023639.486.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -256,8 +256,8 @@
   <data name="aboutUs-ZenAibo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\aboutUs-ZenAibo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Login (Username)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Login (Username).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="editICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\editICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mpICON_Expand" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mpICON_Expand.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -265,8 +265,8 @@
   <data name="Signup (NoGlow)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Signup (NoGlow).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="editICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\editICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ICON_Bear" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ICON_Bear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Signup (GLOW)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Signup (GLOW).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -301,11 +301,8 @@
   <data name="-" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\-.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="EnlargedNewTimeLine-Wolf" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\EnlargedNewTimeLine-Wolf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="aboutUS-ZenAibo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\aboutUS-ZenAibo2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Dashboard_Motivation1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dashboard_Motivation1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="BG_Profile-accomplishementList2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BG_Profile-accomplishementList2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -318,6 +315,12 @@
   </data>
   <data name="btnPressed_aboutUs" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnPressed_aboutUs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ICON_Wolf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ICON_Wolf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Dashboard_CALENDARMay29" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dashboard_CALENDARMay29.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnPressed_Calendar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnPressed_Calendar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
