Calendar week linked with added task daily done

--- a/FINAL PROJECT/Properties/Resources.resx
+++ b/FINAL PROJECT/Properties/Resources.resx
@@ -175,8 +175,8 @@
   <data name="circleIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\circleIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnPressed_Calendar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnPressed_Calendar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="DailyTaskSmallAPNIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DailyTaskSmallAPNIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Login (ShowPass)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Login (ShowPass).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,8 +202,8 @@
   <data name="Logo w Name" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo w Name.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Untitled design - 2024-04-29T021726.290" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Untitled design - 2024-04-29T021726.290.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="BG_DashboardGoals" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BG_DashboardGoals.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="-" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\-.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -214,20 +214,26 @@
   <data name="BG_Deadline-taskList2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BG_Deadline-taskList2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DailyTaskGymIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DailyTaskGymIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ICON_Trash (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ICON_Trash (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="BG_Deadline-taskList4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BG_Deadline-taskList4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="BG_DashboardGoals" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\BG_DashboardGoals.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Untitled design - 2024-04-29T023405.591" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Untitled design - 2024-04-29T023405.591.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AboutUs_Pipol1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AboutUs_Pipol1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DailyTaskCareerIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DailyTaskCareerIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BG_Dashboard" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BG_Dashboard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mpICON_Line" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mpICON_Line.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -265,6 +271,9 @@
   <data name="btnPressed_Dashboard" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnPressed_Dashboard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DailyTaskETNIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DailyTaskETNIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="checkIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\checkIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -295,14 +304,17 @@
   <data name="Untitled design - 2024-04-29T023527.334" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Untitled design - 2024-04-29T023527.334.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="deleteIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\deleteIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="DailyTaskAPNIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DailyTaskAPNIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Untitled design - 2024-04-29T023639.486" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Untitled design - 2024-04-29T023639.486.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="aboutUs-ZenAibo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\aboutUs-ZenAibo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Untitled design - 2024-04-29T021726.290" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Untitled design - 2024-04-29T021726.290.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="editICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\editICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -318,6 +330,9 @@
   </data>
   <data name="Signup (NoGlow)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Signup (NoGlow).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DailyTaskHomeResIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DailyTaskHomeResIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ICON_Bear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ICON_Bear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -340,11 +355,20 @@
   <data name="BG_Profile-accomplishmentList" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BG_Profile-accomplishmentList.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DailyTaskAcadsIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DailyTaskAcadsIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnPressed_aboutUs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnPressed_aboutUs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Untitled design - 2024-04-29T023254.961" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Untitled design - 2024-04-29T023254.961.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mpICON_GrayLine" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mpICON_GrayLine.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Dashboard_Motivation1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dashboard_Motivation1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mpICON_GOAL" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mpICON_GOAL.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -361,31 +385,28 @@
   <data name="Login (Username)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Login (Username).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Dashboard_Motivation1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Dashboard_Motivation1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="BG_Profile-accomplishementList2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\BG_Profile-accomplishementList2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="aboutUS-ZenAibo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\aboutUS-ZenAibo2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="BG_Dashboard" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\BG_Dashboard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btnPressed_aboutUs" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnPressed_aboutUs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ICON_Wolf" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ICON_Wolf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Dashboard_CALENDARMay29" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Dashboard_CALENDARMay29.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnPressed_Calendar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnPressed_Calendar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="BG_Profile-accomplishementList2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BG_Profile-accomplishementList2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="deleteIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\deleteIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="EnlargedNewTimeLineForWolf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EnlargedNewTimeLineForWolf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ICON_Wolf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ICON_Wolf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnPressed_Calendar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnPressed_Calendar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DailyTaskOthersIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DailyTaskOthersIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
