--- a/FINAL PROJECT/Properties/Resources.resx
+++ b/FINAL PROJECT/Properties/Resources.resx
@@ -408,6 +408,7 @@
   </data>
   <data name="DailyTaskOthersIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DailyTaskOthersIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Dashboard_Motivation5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Dashboard_Motivation5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
